# django-dukop

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  manage.py  pytest.ini  setup.cfg
src/dukop/: __init__.py  urls.py  wsgi.py
src/dukop/apps/calendar/: admin.py  forms.py  models.py  urls.py  views.py
src/dukop/apps/calendar/migrations/: 0001_initial.py  0002_auto_20190511_1831.py  0003_weekday_number.py  0004_weekdays.py  0005_auto_20190526_1640.py
src/dukop/apps/calendar/templates/calendar/: index.html
src/dukop/apps/calendar/templates/calendar/event/: create.html
src/dukop/apps/users/: models.py  urls.py  views.py
src/dukop/apps/users/migrations/: 0001_initial.py  0002_group_is_restricted.py
src/dukop/apps/users/templates/users/: logged_out.html  login.html  password_reset_form.html
src/dukop/conf/: settings.py  urls.py
src/dukop/settings/: __init__.py  base.py  dev.py  production.py
src/dukop/static/css/: _base.scss  _card.scss  _create-form.scss  _event-table.scss  _header.scss  _places.scss  _search.scss  _timeline.scss  _variables.scss  application.scss
src/dukop/static/js/: main.js
src/dukop/templates/: base.html
test/: test_basic.py
