[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py

[metadata]
name = dukop
version = attr:dukop.__version__
description = Describe your project in one sentence.
long_description = file: README.md
author = dukop team
author_email = development@example.com
url = https://www.example.com/
license = Other/Proprietary License
# If you use a license file activate the line below.
# license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    django>=2.1,<2.2
    django-csp>=3,<4
    django_compressor>=2.2,<2.3
    django_libsass>=0.7,<0.8
    pillow
python_requires = >=3.6

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.37
    django-debug-toolbar>=1.10,<1.11
    pre-commit
    pytest>=4.1,<4.2
    pytest-django>=3.4,<3.5

[options.packages.find]
where =
    src

[flake8]
ignore = E501
max-line-length = 160
max-complexity = 10
exclude = */*migrations
